force-app/main/default/objects/Krow__JIRA_Integration__c/Krow__JIRA_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will hold the JIRA Cloud credentials.</description>
    <label>JIRA Integration</label>
</CustomObject>