force-app/main/default/objects/Krow__JIRA_Integration__c/fields/Krow__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Krow__Base_URL__c</fullName>
    <description>Base URL of the JIRA Cloud account.</description>
    <inlineHelpText>Base URL of the JIRA Cloud account.</inlineHelpText>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>