force-app/main/default/objects/Krow__JIRA_Integration__c/fields/Krow__Jira_Default_Project_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Jira_Default_Project_Owner_Email__c</fullName>
    <description>Default owner email to define project owner for a project created from jira</description>
    <inlineHelpText>Default owner email to define project owner for a project created from jira</inlineHelpText>
    <label>Jira Default Project Owner Email</label>
    <length>60</length>
    <type>Text</type>
</CustomField>