force-app/main/default/objects/Krow__JIRA_Integration__c/fields/Krow__Password__c.field-meta.xml
<CustomField>
    <fullName>Krow__Password__c</fullName>
    <description>JIRA Cloud&apos;s API token.
https://id.atlassian.com/manage/api-tokens.</description>
    <inlineHelpText>JIRA Cloud&apos;s API token.
https://id.atlassian.com/manage/api-tokens.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>