force-app/main/default/objects/Krow__JIRA_Integration__c/fields/Krow__Sync_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Task_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Sync the task/issue dates we need to check this. If not checked and dates are added on JIRA project screens, task/issue creation will fail.</description>
    <label>Sync Task/Issue Dates</label>
    <type>Checkbox</type>
</CustomField>