force-app/main/default/objects/Krow__JIRA_Integration__c/fields/Krow__Task_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Start_Date__c</fullName>
    <description>This field contains the task(issue) start date field api name(need to create in JIRA)</description>
    <inlineHelpText>This field contains the task(issue) start date field api name(need to create in JIRA)</inlineHelpText>
    <label>Task Start Date(custom field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>