force-app/main/default/objects/Krow__JIRA_Integration__c/fields/Krow__Username__c.field-meta.xml
<CustomField>
    <fullName>Krow__Username__c</fullName>
    <description>JIRA Cloud&apos;s Username</description>
    <inlineHelpText>JIRA Cloud&apos;s Username</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>